# QT_SubFileText

./: CMakeLists.txt  Copy.pro  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
